Fixed coin name alignment

--- a/components/home-page/currencies-section/currencies-table-item/currencies-table-item.module.scss
+++ b/components/home-page/currencies-section/currencies-table-item/currencies-table-item.module.scss
@@ -3,6 +3,7 @@
 .currencies__table__coin {
   display: flex;
   align-items: center;
+  justify-content: center;
 
   span {
     font-weight: bold;
@@ -12,6 +13,12 @@
 
 .currencies__table__sparkline {
   width: 220px;
+}
+
+@media (max-width: 920px) {
+  .currencies__table__coin {
+    justify-content: flex-start;
+  }
 }
 
 @media (max-width: 420px) {
