--- a/components/home-page/currencies-section/currencies-table/currencies-table.module.scss
+++ b/components/home-page/currencies-section/currencies-table/currencies-table.module.scss
@@ -20,6 +20,7 @@
 
     th {
       padding-bottom: 1.2rem;
+      font-size: $font-xl;
     }
 
     .table__placeholder {
